# candigv2-authx

./: .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  test_auth.py
authx/: auth.py
src/authx/: auth.py
