[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candigv2-authx"
version = "2.4.3"
dependencies = [
    "requests>=2.25.1",
    "minio>=7.1.7",
    "pytest>=7.2.0",
    "PyJWT>=2.6.0",
    "cryptography>=3.4.0"
    ]
requires-python = ">= 3.9"
description = "Common authentication and authorization methods for CanDIGv2"
readme = "README.md"

[project.urls]
Repository = "https://github.com/CanDIG/candigv2-authx"
